--- a/style.css
+++ b/style.css
@@ -31,11 +31,12 @@
   height: 450px;
   border: 1px solid green;
   /*background-color: cyan;*/
+  display: flex;
 }
 .left{
   width: 30%;
-  margin-top: 20px;
-  height: 400px;
+ /* margin-top: 20px;*/
+  height: 450px;
   /*border: grey;*/
   /*background-color: yellow;*/
 }
@@ -49,16 +50,16 @@ img{
 }
 .right{
   background-color: blue;
-  width: 60%;
+  width: 70%;
   border: 1px solid orange;
-  float: right;
-  height: 300px;
-  padding-top: 50px;
-  margin-right: 20px;
+ /*float: right;*/
+  height: 450px;
+  /*padding-top: 50px;*/
+  /*margin-right: 20px;*/
 
 }
 h1{
-   margin-top: 10px;
+  margin: 0 auto;
 }
 p{
   font-size: 24px;
