--- a/style.css
+++ b/style.css
@@ -1,94 +1,481 @@
+
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: sans-serif;
 }
 .nav{
-  width: 100%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  background: black;
-  color: white;
-  font-size: 24px;
+width: 100%;
+height: 50px;
+display: flex;
+align-items: center;
+background: black;
+font-size: 24px;
+position: fixed;
 }
 .navspace{
-  margin-right: 30px;
+padding-right: 10px;
+padding-left: 20px;
+}
+.navspace a{
+text-decoration: none;
+color: white;
 }
 .logo{
-  width: 50%;
-  height: 97px;
-  float: left;
-  margin: 0 auto;
-  font-size: 30px;
-  padding-top: 30px;
+width: 50%;
+height: 50px;
+font-size: 30px;
+padding-top: 10px;
+padding-left: 20px;
+color: white;
 }
 .container{
-  width: 100%;
-  height: 450px;
-  border: 1px solid green;
-  /*background-color: cyan;*/
-  display: flex;
+width: 100%;
+height: 500px;
+/*border: 5px solid green;*/
+background-color: #fff;
+display: flex;
+background-image: url("image/laptop.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+/*margin-top: 50px;*/
 }
 .left{
-  width: 30%;
- /* margin-top: 20px;*/
-  height: 450px;
-  /*border: grey;*/
-  /*background-color: yellow;*/
+width: 30%;
+margin-top: 20px;
+height: 590px;
+/*border: grey;*/
+/*background-color: yellow;*/
 }
-img{
-  border-radius: 50%;
-  height: 350px;
-  width: 90%;
-  margin-left: 20px;
-  /*border: 1px solid pink;*/
-  margin-top: 20px;
+.personal{
+border-radius: 50%;
+height: 336px;
+width: 85%;
+margin-left: 40px;
+margin-top: 80px;
+/*border: 1px solid pink;*/
+background-image: url("image/sub.jpg");          
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
 }
 .right{
-  background-color: blue;
-  width: 70%;
-  border: 1px solid orange;
- /*float: right;*/
-  height: 450px;
-  /*padding-top: 50px;*/
-  /*margin-right: 20px;*/
-
+/*background-color: blue;*/
+width: 70%;
+/*border: 1px solid orange;*/
+height: 590px;
 }
 h1{
-  margin: 0 auto;
-}
+margin-left: 160px;
+margin-top: 120px;
+font-size: 30px;
+color: beige;
+}   
+span{
+font-weight: 700;
+}   
 p{
-  font-size: 24px;
-  margin-top: 50px;
-  float: left;
-  text-align: left;
-  letter-spacing: 1px;
+font-size: 24px;
+margin-top: 30px;
+text-align: left;
+letter-spacing: 1px;
+margin-left: 160px;
+padding-top: 10px;
+color: beige;
 }
 button{ 
-  background-color: #EA8A95;
-  letter-spacing: 1px;
-  font-size: 24px;
-  border-radius: 5%;
-  margin-bottom: 50px;
-  margin-top: 50px;
-  text-align: center;
+background-color: burlywood;
+letter-spacing: 1px;
+font-size: 30px;
+border-radius: 5%;
+margin-top: 80px;
+text-align: center;
+margin-left: 160px;
+padding: 14px 34px;
+border: none;
+}
+.section{
+width: 100%;
+height: 200px;
+/*border: 1px solid black;*/
+background-color: #f5f5f5;
+text-align: center;
+padding-top: 20px;
+}
+.my-work{
+width: 50%;
+height: 100px;
+/*border: 1px solid blue;*/
+margin: 0 auto;
+text-align: center;
+font-size: 24px;
+}
+.h1{
+margin-top: 40px; 
+font-size: 30px;
+font-weight: 700;
+color: #3e3e3e;
+}
+.heading{
+margin-top: 40px; 
+font-size: 50px;
+font-weight: 700;
+color: #3e3e3e;
+}
+.p{
+margin: 20px;
+padding: 0;
+font-size: 20px;
+letter-spacing: 1px;
+line-height: 1.9;
+color: #888;
+font-weight: 300;
+}
+.inner-box1{
+width: 100%;
+height: 450px;
+/*border: 1px solid green;*/
+margin: 0 auto;
+background-color: #f5f5f5;
+}
+.col1{
+width: 25%;
+height: 250px;
+/*border: 1px solid green;*/
+float: left;
+margin-left: 150px ;
+}   
+.text{
+width: 100%;
+height: 100px;
+/*border: 1px solid olive;*/
+float: left;
+text-align: center;
+}
+.col2{
+width: 25%;
+height: 250px;
+/*border: 1px solid green;*/
+float: left;
+margin-left: 30px;
+} 
+.col3{
+width: 25%;
+height: 250px;
+/*border: 1px solid green;*/
+float: left;
+margin-left: 30px;
+background-size: cover;
+}  
+.inner-box2{
+width: 100%;
+height: 485px;
+/*border: 1px solid green;*/
+background-color: #f5f5f5;
+padding-top: 50px;
+margin: 0 auto;
+}
+.col4{
+width: 25%;
+height: 250px;
+/*border: 1px solid green;*/
+float: left;
+margin-left: 150px ;
+} 
+.col5{
+width: 25%;
+height: 250px;
+/*border: 1px solid green;*/
+float: left;
+margin-left: 30px;
+}  
+.col6{
+width: 25%;
+height: 250px;
+/*border: 1px solid green;*/
+float: left;
+margin-left: 30px;
+background-size: cover;
+} 
+.welcome{
+width: 100%;
+height: 790px;
+/*border: 5px solid black;*/
+background-color: ghostwhite;
+text-align: center;
+}
+.welcome h1{ 
+font-size: 50px;
+font-weight: 700;
+color: #3e3e3e;
+margin: 0 auto;
+padding-top: 70px;
+
+}
+.welcome p{
+  /*width: 100%;*/
+  text-align: left;
+margin-top: 40px; 
+font-size: 24px;
+font-weight: 700;
+color: #3e3e3e;
+/*text-align: center;*/
+margin-left: 220px;
 }
 
-.mid-container{
+.skill_set{
   width: 100%;
-  height: 500px;
-  border: 1px solid black;
-  background-color: darkcyan;
+  float: left;
+  margin-top: 30px;
+}
+.upper_skill_row{
+  width: 100%;
+  height: 250px;
+  /*border: 2px solid red;*/
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.lower_skill_row{
+  width: 100%;
+  height: 250px;
+  /*border: 2px solid green;*/
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.skill_box{
+  width: 30%;
+  height: 246px;
+  float: left;
+  /*border: 2px solid blue;*/
+}
+.skill_image{
+  width: 25%;
+  height: 90px;
+  /*border: 2px solid darkred;*/
+  margin: 0 auto;
+  margin-top: 5%;
+  text-align: center; 
+}
+.skill_text{
+  width: 100%;
+  height: 40px;
+  /*border: 2px solid brown;*/
+  margin-top: 2%;
+  text-align: center;
+  font-size: 30px;
+  color: skyblue;
+}
+.progress{
+  width: 100%;
+  height: 20px;
+  /*border: 2px solid red;*/
+  margin: 0 auto;
+  border-radius: 10px;
+  margin-top: 3%;
+  background-color: darkgrey;
+}
+.progress_bar1{
+  width: 80%;
+  height: 20px;
+ /* border: 2px solid black;*/
+  border-radius: 10px;
+  background-color: orange;
+
+}
+.progress_bar2{
+  width: 60%;
+  height: 20px;
+ /* border: 2px solid black;*/
+  border-radius: 10px;
+  background-color: sienna;
+
+}
+.progress_bar3{
+  width: 80%;
+  height: 20px;
+ /* border: 2px solid black;*/
+  border-radius: 10px;
+  background-color: cadetblue;
+
+}
+.progress_bar4{
+  width: 40%;
+  height: 20px;
+ /* border: 2px solid black;*/
+  border-radius: 10px;
+  background-color: seagreen;
+
+}
+.progress_bar5{
+  width: 70%;
+  height: 20px;
+ /* border: 2px solid black;*/
+  border-radius: 10px;
+  background-color: violet;
+
+}
+.progress_bar6{
+  width: 20%;
+  height: 20px;
+ /* border: 2px solid black;*/
+  border-radius: 10px;
+  background-color: green;
+
+}
+.contact_details{
+  width: 100%;
+  height: 350px;
+  background-color: whitesmoke;
+  float: left;
+  /*border: 1px solid green;*/
+}
+.bold_text{
+  margin: 0 auto;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 10px;
+  margin-top: 20px;
+}
+.bold_address {
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 30px;
+    /*float: left;*/
+}
+.description{
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 10px;
+  font-size: 25px;
+  line-height: 10px;
+  padding: 35px;
+  color: rgba(0, 0, 0, 0.4);
+}
+.contact1{
+  width: 100%;
+  height: 20px;
+  margin-top: 30px;
+  float: left;
+}
+.map{
+  width: 100%;
+  height: 250px;
+  /*border: 1px solid orange;*/
+  float: left;
+  /*margin-top: 50px;*/
+}
+.footer{
+  width: 100%;
+ /* height: 10px;*/
+  background-color: black;
+  padding: 15px;
+  font-size: 15px;
+  float: left; 
+  /*border: 5px solid orange;*/ 
+}
+.footer_text{
+  text-align: center;
+  color: white;
 }
 
-.image{
-      width: 30%;
-      height: 250px;
-      float: left;
-      border: 1px solid olive;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+.skill-set {
+width: 15%;
+height: 10px;
+float: left;
+margin-top: 50px;
+margin-left: 20px;
+display: block;
+}*/
+/*.logo{
+width: 50%;
+height: 10px;
+margin: 0 auto;
+border-radius: 10px;
+margin-top: 10px;
+text-align: center;
+display: block;*/
+}/*
+.experience{
+color: red;
+font-size: 20px;
+padding-left: 10px;
+padding-top: 20px;
+text-align: center;
+font-weight: 700;
+display: block;
 }
-    
+.process{
+width: 90%;
+height: 10px;
+border: 1px solid green;
+background-color: lightblue;
+margin-top: 20px;
+margin-left: 10px;
+border-radius: 20px;
+display: block;
+}
+.progress-bar1{
+width: 70%;
+height: 10px;
+background: slategray;
+margin-top: 10px;
+border-radius: 20px;
+display: flex;
+}
+.progress-bar2{
+width: 70%;
+height: 10px;
+background: silver;
+margin-top: 10px;
+border-radius: 20px;
+display: block;
+}
+.progress-bar3{
+width: 70%;
+height: 10px;
+background: blueviolet;
+margin-top: 10px;
+border-radius: 20px;
+display: block;
+}
+.progress-bar4{
+width: 70%;
+height: 10px;
+background: green;
+margin-top: 10px;
+border-radius: 20px;
+display: block;
+}
+
+
+
+
+
+*/
