--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-font-family: sans-serif;
+font-family: 'Montserrat','sans-serif';
 }
 .nav{
 width: 100%;
@@ -215,14 +215,15 @@ padding-top: 70px;
 
 }
 .welcome p{
-  /*width: 100%;*/
-  text-align: left;
-margin-top: 40px; 
+/*width: 100%;*/
+float: left;
+margin: 0 auto;
+margin-top: 30px; 
 font-size: 24px;
 font-weight: 700;
 color: #3e3e3e;
 /*text-align: center;*/
-margin-left: 220px;
+margin-left: 350px;
 }
 
 .skill_set{
@@ -330,7 +331,7 @@ margin-left: 220px;
 }
 .contact_details{
   width: 100%;
-  height: 350px;
+  height: 380px;
   background-color: whitesmoke;
   float: left;
   /*border: 1px solid green;*/
@@ -368,9 +369,16 @@ margin-left: 220px;
 .map{
   width: 100%;
   height: 250px;
-  /*border: 1px solid orange;*/
+  border: 5px solid black;
   float: left;
   /*margin-top: 50px;*/
+}
+.icon{
+  width: 100%;
+  height: 45px;
+  border: 3px solid green;
+  background-color: orange;
+  margin-top: 18px;
 }
 .footer{
   width: 100%;
